<resources>
    <string name="app_name">NavDrawerFormacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_profile">Profile</string>

    <string name="textview_name">Name</string>
    <string name="textview_weight">Weight</string>
    <string name="textview_stats">Stats</string>
    <string name="textview_base_experience">Base Experience</string>
    <string name="textview_order">Order</string>
    <string name="textview_height">Height</string>
    <string name="textview_type">Type</string>
    <string name="textview_surname_one">Surname One</string>
    <string name="textview_surname_two">Surname Two</string>
    <string name="textview_postal_address">Postal Address</string>



    <string name="button_set_profile">Set Profile</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>


</resources>